client/comments: fix header wrapping on chrome

--- a/client/css/comment-control.styl
+++ b/client/css/comment-control.styl
@@ -52,6 +52,9 @@ $comment-border-color = #DDD
                 padding: 0 1em
                 line-height: 2.25em
 
+            .score-container, .link-container
+                display: inline-block
+
             &:before
                 position: absolute
                 display: block
